BB-1311 - fixed contract tests
