# src/Generated/Endpoint/GetPriceCollection.php
@@ -10,6 +10,7 @@ class GetPriceCollection extends \Datenkraft\Backbone\Client\PriceAssessmentApi\
      * @param array $queryParameters {
      *     @var string $filter[customerId] Customer Id filter
      *     @var string $filter[skuCode] SKU Code filter
+     *     @var string $filter[validFrom] Valid From Date filter
      * }
      */
     public function __construct(array $queryParameters = array())
@@ -36,11 +37,12 @@ class GetPriceCollection extends \Datenkraft\Backbone\Client\PriceAssessmentApi\
     protected function getQueryOptionsResolver() : \Symfony\Component\OptionsResolver\OptionsResolver
     {
         $optionsResolver = parent::getQueryOptionsResolver();
-        $optionsResolver->setDefined(array('filter[customerId]', 'filter[skuCode]'));
+        $optionsResolver->setDefined(array('filter[customerId]', 'filter[skuCode]', 'filter[validFrom]'));
         $optionsResolver->setRequired(array('filter[customerId]', 'filter[skuCode]'));
         $optionsResolver->setDefaults(array());
         $optionsResolver->setAllowedTypes('filter[customerId]', array('string'));
         $optionsResolver->setAllowedTypes('filter[skuCode]', array('string'));
+        $optionsResolver->setAllowedTypes('filter[validFrom]', array('string'));
         return $optionsResolver;
     }
     /**
