# src/Generated/Model/OrganizationPricingProfile.php
@@ -35,6 +35,12 @@ class OrganizationPricingProfile
      */
     protected $percent;
     /**
+     * Start date from when on the price is valid
+     *
+     * @var \DateTime
+     */
+    protected $validFrom;
+    /**
      * Organization Pricing Profile Id
      *
      * @return string
@@ -137,6 +143,27 @@ class OrganizationPricingProfile
     public function setPercent(?float $percent) : self
     {
         $this->percent = $percent;
+        return $this;
+    }
+    /**
+     * Start date from when on the price is valid
+     *
+     * @return \DateTime
+     */
+    public function getValidFrom() : \DateTime
+    {
+        return $this->validFrom;
+    }
+    /**
+     * Start date from when on the price is valid
+     *
+     * @param \DateTime $validFrom
+     *
+     * @return self
+     */
+    public function setValidFrom(\DateTime $validFrom) : self
+    {
+        $this->validFrom = $validFrom;
         return $this;
     }
 }
